--- a/res/layout/menu_activity.xml
+++ b/res/layout/menu_activity.xml
@@ -5,16 +5,34 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/detect_btn"
-            android:text="물체인식"/>
-        <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="#74C1E4EC"
+            android:text="물체인식"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />
+
+        <Button
             android:id="@+id/text_btn"
-            android:text="문자인식"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="#28E9BDE2"
+            android:text="문자인식"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />
+
+        <Button
+            android:id="@+id/bus_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="#28EBE9BA"
+            android:text="버스안내"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />
     </LinearLayout>
 </LinearLayout>
