--- a/res/layout/bus_activity.xml
+++ b/res/layout/bus_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="10"
-    tools:context=".MainActivity">
+    tools:context=".BusActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,7 +58,7 @@
 
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/detectbus"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_gravity="center"
