--- a/res/layout/bus_activity.xml
+++ b/res/layout/bus_activity.xml
@@ -58,7 +58,7 @@
 
 
         <Button
-            android:id="@+id/detectbus"
+            android:id="@+id/detect_bus"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_gravity="center"
@@ -67,6 +67,12 @@
             android:text="검색하기" />
     </LinearLayout>
 
+
+    <Button
+        android:id="@+id/voice_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="음성검색" />
 
     <ScrollView
         android:layout_width="match_parent"
