--- a/res/layout/bus_activity.xml
+++ b/res/layout/bus_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="10"
-    tools:context=".BusActivity">
+    tools:context="org.YourEyes.demo.BusActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
