--- a/res/layout/bus_activity.xml
+++ b/res/layout/bus_activity.xml
@@ -15,7 +15,7 @@
         android:entries="@array/api"
         android:layout_height="wrap_content"/>
 
-    <RadioGroup
+   <!-- <RadioGroup
         android:id="@+id/rg_object_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,7 +35,7 @@
             android:text="map"/>
 
     </RadioGroup>
-
+-->
     <Button
         android:id="@+id/bt_api_call"
         android:layout_width="wrap_content"
