--- a/res/layout/information.xml
+++ b/res/layout/information.xml
@@ -7,6 +7,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="기능 안내" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="사용한 기술 : TensorflowLite, OpenCV," />
     <TextView
         android:layout_width="match_parent"
