--- a/res/layout/textdetect_activity.xml
+++ b/res/layout/textdetect_activity.xml
@@ -16,8 +16,8 @@
         android:layout_alignParentTop="true">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
@@ -25,14 +25,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/scrollView"
-                android:gravity="center"
                 android:layout_marginLeft="20px"
+                android:gravity="center"
                 android:text="처리시간" />
 
             <TextView
                 android:id="@+id/tv_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
                 android:layout_below="@+id/scrollView"
                 android:layout_marginLeft="20px"
                 android:gravity="center"
@@ -40,9 +40,9 @@
 
             <ImageView
                 android:id="@+id/iv_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp" />
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginTop="20px" />
         </LinearLayout>
     </ScrollView>
 
