--- a/res/layout/textdetect_activity.xml
+++ b/res/layout/textdetect_activity.xml
@@ -9,42 +9,45 @@
     android:background="#ffffff">
 
 
-    <ScrollView
-        android:id="@+id/scrollView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true">
+        android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/scrollView"
+            android:layout_marginLeft="20px"
+            android:gravity="center"
+            android:text="처리시간" />
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="250dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/tv_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/scrollView"
-                android:layout_marginLeft="20px"
-                android:gravity="center"
-                android:text="처리시간" />
+                    <TextView
+                        android:id="@+id/tv_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/scrollView"
+                        android:layout_marginLeft="20px"
+                        android:gravity="center"
+                        android:text="인식할 문자를 찍어주세요." />
+                </LinearLayout>
+            </ScrollView>
 
-            <TextView
-                android:id="@+id/tv_view"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:layout_below="@+id/scrollView"
-                android:layout_marginLeft="20px"
-                android:gravity="center"
-                android:text="인식할 문자를 찍어주세요." />
-
-            <ImageView
-                android:id="@+id/iv_image"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_marginTop="20px" />
-        </LinearLayout>
-    </ScrollView>
+        <ImageView
+            android:id="@+id/iv_image"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_marginTop="20px" />
+    </LinearLayout>
 
 
     <Button
