--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="api">
-        <item>버스 노선 조회</item>
         <item>버스노선 상세정보 조회</item>
         <item>버스정류장 세부정보 조회</item>
-        <item>노선 그래픽 데이터 검색</item>
-        <item>대중교통 정류장 검색</item>
-        <item>반경내 대중교통 POI 검색</item>
-        <item>지도 위 대중교통 POI 검색</item>
-        <item>대중교통 길찾기</item>
-        <item>도시코드 조회</item>
+        <item>반경내 정류장 검색</item>
     </string-array>
 </resources>
