--- a/res/layout/bus_titlebar.xml
+++ b/res/layout/bus_titlebar.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:background="#ffab90">
+
     <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/title"
         android:text="Your Eyes"
-        android:textSize="33dp"
-        android:textColor="#ffffff"/>
+        android:textColor="#ffffff"
+        android:textSize="33dp" />
 </RelativeLayout>
