--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -37,11 +37,12 @@
         <item name="colorAccent">#D81B60</item>
     </style>
     <style name="CustomTitle" parent="android:Theme">
-        <item name="android:windowTitleSize">48dp</item>
+        <item name="android:windowTitleSize">50dp</item>
+        <item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
     </style>
 
-    <!--<style name="CustomWindowTitleBackground">
+    <style name="CustomWindowTitleBackground">
         <item name="android:background">#ffffffff</item>
     </style>
--->
+
 </resources>
