--- a/res/layout/bus_activity.xml
+++ b/res/layout/bus_activity.xml
@@ -10,69 +10,93 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Spinner
-            android:id="@+id/sp_api"
-            android:layout_width="0px"
-            android:layout_weight="4"
-            android:entries="@array/api"
-            android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:layout_weight="9"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/bt_api_call"
-            android:layout_width="0px"
-            android:layout_weight="1"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="검색"/>
+            android:orientation="horizontal">
+            <Spinner
+                android:id="@+id/sp_api"
+                android:layout_width="0px"
+                android:layout_weight="4"
+                android:entries="@array/api"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/bt_api_call"
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="검색"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            android:id="@+id/inputBus_layout">
+            <EditText
+                android:layout_width="0px"
+                android:layout_weight="4"
+                android:layout_height="wrap_content"
+                android:id="@+id/inputBus" />
+
+            <Button
+                android:id="@+id/inputBus_ok"
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="검색"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:orientation="horizontal"
+            android:id="@+id/inputStation_layout">
+
+            <EditText
+                android:id="@+id/inputStation"
+                android:layout_width="0px"
+                android:layout_weight="4"
+                android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/inputStation_ok"
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="검색"/>
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/stationList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/inputStation_layout"
+            ></ListView>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:visibility="gone"
-        android:id="@+id/inputBus_layout">
-        <EditText
-            android:layout_width="0px"
-            android:layout_weight="4"
-            android:layout_height="wrap_content"
-            android:id="@+id/inputBus" />
+        android:layout_weight="1">
 
         <Button
-            android:id="@+id/inputBus_ok"
-            android:layout_width="0px"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="검색"/>
+            android:id="@+id/voice_btn"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="#FFAB90"
+            android:text="음성 검색"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            />
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:orientation="horizontal"
-        android:id="@+id/inputStation_layout">
-
-        <EditText
-            android:id="@+id/inputStation"
-            android:layout_width="0px"
-            android:layout_weight="4"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/inputStation_ok"
-            android:layout_width="0px"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="검색"/>
-
-    </LinearLayout>
-
-    <ListView
-        android:id="@+id/stationList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"></ListView>
 
 
 </LinearLayout>
