--- a/res/layout/bus_activity.xml
+++ b/res/layout/bus_activity.xml
@@ -96,7 +96,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:id="@+id/direction_btn_layout"
-                android:gravity="center">
+                android:gravity="center"
+                android:visibility="gone">
                 <Button
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
