--- a/res/layout/bus_activity.xml
+++ b/res/layout/bus_activity.xml
@@ -86,6 +86,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:id="@+id/laneInfo_layout"
+            android:visibility="gone"
             >
             <TextView
                 android:layout_width="match_parent"
@@ -96,8 +97,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:id="@+id/direction_btn_layout"
-                android:gravity="center"
-                android:visibility="gone">
+                android:gravity="center">
                 <Button
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
