change imagebutton to button

--- a/res/layout/menu_activity.xml
+++ b/res/layout/menu_activity.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -9,41 +10,44 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageButton
+        <Button
             android:id="@+id/detect_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="0sp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/object_btn2"
-            />
+            android:background="@drawable/object_btn2"
+            android:scaleType="fitXY"
+            android:text="물체인식"
+            android:textColor="#00FFFFFF" />
 
-        <ImageButton
+        <Button
             android:id="@+id/text_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="0sp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/word_btn2" />
+            android:background="@drawable/word_btn2"
+            android:scaleType="fitXY"
+            android:text="글자인식"
+            android:textColor="#00FFFFFF" />
 
-        <ImageButton
+        <Button
             android:id="@+id/bus_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="0sp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/bus_btn2" />
+            android:background="@drawable/bus_btn2"
+            android:scaleType="fitXY"
+            android:text="버스안내"
+            android:textColor="#00FFFFFF" />
 
-        <ImageButton
+        <Button
             android:id="@+id/information_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="0sp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/information_btn2" />
+            android:background="@drawable/information_btn2"
+            android:scaleType="fitXY"
+            android:text="어플정보"
+            android:textColor="#00FFFFFF" />
     </LinearLayout>
 </LinearLayout>
